--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 discord.py==2.0.1
 python-dotenv>=0.21.0
-aiohttp>=3.8.1
+httpx[http2]
 asyncio-dgram>=2.1.2
 dnspython>=2.2.1
-async-timeout>=4.0.2
