--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-discord.py==2.0.1
-python-dotenv>=0.21.0
-httpx[http2]
-asyncio-dgram>=2.1.2
-dnspython>=2.2.1
+discord.py==2.1.0
+python-dotenv==0.21.1
+httpx[http2]==0.23.3
+asyncio-dgram==2.1.2
+dnspython==2.3.0
