--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,6 @@ dev = [
     "pre-commit",
     "pre-commit-hooks~=4.4.0",  # must match .pre-commit-config.yaml
     "tox~=4.5.1",
-    "trio-typing[mypy]~=0.8.0",
 ]
 format = [
     "black~=23.3.0",            # must match .pre-commit-config.yaml
@@ -42,9 +41,6 @@ tests = [
     "flake8~=6.0.0",            # must match .pre-commit-config.yaml
     "flake8-bugbear~=23.5.9",   # must match .pre-commit-config.yaml
     "flake8-noqa~=1.3.1",       # must match .pre-commit-config.yaml
-    "pytest~=7.3.1",
-    "pytest-cov~=4.1.0",
-    "pytest-trio~=0.8.0",
 ]
 
 [project.urls]
@@ -107,24 +103,16 @@ legacy_tox_ini = """
     setenv =
         PYTHONPATH = {toxinidir}
 
-    [testenv:pytest]
-    deps =
-        pytest
-        pytest-cov
-        pytest-trio
-    commands = pytest --basetemp={envtmpdir}
-
     [testenv:flake8]
     deps =
         flake8
         flake8-bugbear
         flake8-noqa
-    commands = flake8 src tests
+    commands = flake8 src
 
     [testenv:mypy]
     deps =
         mypy
-        trio-typing[mypy]
     commands = mypy src
 
     [format]
@@ -135,15 +123,15 @@ legacy_tox_ini = """
     [format:pycln]
     deps =
         pycln
-    commands = pycln src tests
+    commands = pycln src
 
     [format:black]
     deps =
         black
-    commands = black src tests
+    commands = black src
 
     [format:isort]
     deps =
         isort
-    commands = isort src tests
+    commands = isort src
 """
