--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "StatusBot"
-version = "0.8.0"
+version = "0.8.1"
 authors = [
   { name="CoolCat467" },
 ]
@@ -19,7 +19,7 @@ classifiers = [
 ]
 keywords = ["discord", "bot"]
 dependencies = [
-    "discord.py~=2.2.3",
+    "discord.py~=2.3.0",
     "python-dotenv~=1.0.0",
     "httpx[http2]~=0.24.1",
     "mcstatus~=10.0.3",
@@ -27,7 +27,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "mypy~=1.3.0",              # must match .pre-commit-config.yaml
+    "mypy~=1.4.1",              # must match .pre-commit-config.yaml
     "pre-commit",
     "pre-commit-hooks~=4.4.0",  # must match .pre-commit-config.yaml
     "tox~=4.6.0",
@@ -65,6 +65,7 @@ no_implicit_optional = true
 no_implicit_reexport = true
 show_column_numbers = true
 show_error_codes = true
+show_traceback = true
 strict = true
 strict_equality = true
 warn_redundant_casts = true
