--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "discord.py~=2.3.0",
     "python-dotenv~=1.0.0",
     "httpx[http2]~=0.25.0",
-    "mcstatus~=11.0.0",
+    "mcstatus~=11.0.1",
 ]
 
 [project.urls]
@@ -60,15 +60,35 @@ warn_unused_ignores = true
 line-length = 79
 target-version = ['py311']
 
-[tool.isort]
-profile = "black"
-combine_as_imports = true
-line_length = 79
-skip = [".git", ".github", ".venv"]
+[tool.ruff.isort]
+combine-as-imports = true
 
 [tool.pycln]
 all = true
 disable_all_dunder_policy = true
+
+[tool.ruff]
+line-length = 79
+fix = true
+
+include = ["*.py", "*.pyi", "**/pyproject.toml"]
+select = [
+    "A",  # flake8-builtins
+    "ASYNC",  # flake8-async
+    "B",  # flake8-bugbear
+    "E",  # Error
+    "F",  # pyflakes
+    "I",  # isort
+    "RUF",  # Ruff-specific rules
+    "S",  # flake8-bandit
+    "UP",  # pyupgrade
+    "W",  # Warning
+    "YTT",  # flake8-2020
+]
+extend-ignore = [
+    'E501',  # line-too-long
+    "S101",  # use of assert for tests and type narrowing
+]
 
 [tool.tox]
 legacy_tox_ini = """
