--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "python-dotenv~=1.0.0",
     "httpx[http2]~=0.25.0",
     "mcstatus~=11.0.1",
+    "async-timeout~=4.0.3",
 ]
 
 [project.urls]
