--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,11 +166,12 @@ partial_branches = [
 [tool.tox]
 legacy_tox_ini = """
     [tox]
-    envlist = py39, py310, py311, py312, pytest, mypy
+    envlist = py38, py39, py310, py311, py312, pytest, mypy
     isolated_build = false
 
     [gh-actions]
     python =
+        3.8: py38, pytest
         3.9: py39, pytest
         3.10: py310, pytest
         3.11: py311, pytest
