--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,7 +111,6 @@ select = [
     "SIM",   # flake8-simplify
     "SLOT",  # flake8-slots
     "TCH",   # flake8-type-checking
-    "TRIO",  # flake8-trio
     "UP",    # pyupgrade
     "W",     # Warning
     "YTT",   # flake8-2020
@@ -123,7 +122,7 @@ extend-ignore = [
     "D204",  # blank line thing
     "D211",  # no-blank-line-before-class
     "D213",  # multi-line-summary-second-line
-    "TRIO109",  # trio-async-function-with-timeout
+    "ASYNC109",  # trio-async-function-with-timeout
 ]
 
 [tool.ruff.lint.per-file-ignores]
