--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,17 +94,22 @@ select = [
     "B",     # flake8-bugbear
     "C4",    # flake8-comprehensions
     "COM",   # flake8-commas
+    "CPY",   # flake8-copyright
     "D",     # pydocstyle
     "E",     # Error
     "EXE",   # flake8-executable
     "F",     # pyflakes
     "FA",    # flake8-future-annotations
+    "FLY",   # flynt
+    "FURB",  # refurb
     "I",     # isort
+    "ICN",   # flake8-import-conventions
     "N",     # pep8-naming
     "PIE",   # flake8-pie
     "PT",    # flake8-pytest-style
     "PYI",   # flake8-pyi
     "Q",     # flake8-quotes
+    "R",     # Refactor
     "RET",   # flake8-return
     "RUF",   # Ruff-specific rules
     "S",     # flake8-bandit
@@ -116,19 +121,22 @@ select = [
     "YTT",   # flake8-2020
 ]
 extend-ignore = [
-    "E501",  # line-too-long
-    "S101",  # use of assert for tests and type narrowing
-    "D203",  # blank line thing
-    "D204",  # blank line thing
-    "D211",  # no-blank-line-before-class
-    "D213",  # multi-line-summary-second-line
-    "ASYNC109",  # trio-async-function-with-timeout
+    "D203",     # One blank line before class
+    "D204",     # blank line thing
+    "D211",     # no-blank-line-before-class
+    "D213",     # multi-line-summary-second-line
+    "D417",     # "Missing argument descriptions"
+    "E501",     # line-too-long
+    "S101",     # use of assert for tests and type narrowing
+    "ASYNC109", # trio-async-function-with-timeout
+    "SIM117",   # Use multiple with statements at the same time
 ]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = [
     "D100",  # undocumented-public-module
     "D103",  # undocumented-public-function
+    "D107",  # Missing docstring
 ]
 
 [tool.pytest.ini_options]
