Switch to new CI framework based on Trio

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
-# Logs
+# Project Specific
 log.txt
-
-
-# Binaries from virtual environment
-bin/
-
 # Config files
 config/
 
-# Byte-compiled / optimized / DLL files
+# Temp file during Mypy processing
+mypy_annotate.dat
+test-results.xml
+
+# MacOS files
+**/.DS_Store
+
+# Byte-compiled / optimized / DLL files / editor temp files
 __pycache__/
 *.py[cod]
 *$py.class
+*~
+\#*
+.#*
+*.swp
 
 # C extensions
 *.so
@@ -50,6 +56,7 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.venv/
 .nox/
 .coverage
 .coverage.*
@@ -60,6 +67,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+.mypy_cache/
 
 # Translations
 *.mo
@@ -137,3 +145,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Sphinx documentation
+doc/_build/
+
+# PyCharm
+.idea/
