--- a/.github/workflows/autodeps.yml
+++ b/.github/workflows/autodeps.yml
@@ -38,7 +38,7 @@ jobs:
 
       # apply newer versions' formatting
       - name: Black
-        run: black src/checkers
+        run: black src/statusbot
 
       - name: uv
         run: |
