--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 keywords = ["discord", "bot", "minecraft"]
 dependencies = [
     "discord.py~=2.4.0",
+    "audioop-lts; python_version>='3.13'",
     "python-dotenv~=1.0.0",
     "httpx[http2]~=0.27.0",
     "mcstatus~=11.1.1",
