--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ classifiers = [
 ]
 keywords = ["discord", "bot", "minecraft"]
 dependencies = [
-    "discord.py~=2.5.0",
+    "discord-py==2.5.2",
     "audioop-lts; python_version>='3.13'",
-    "python-dotenv~=1.0.0",
+    "python-dotenv~=1.0.1",
     "httpx[http2]~=0.28.1",
     "mcstatus~=11.1.1",
     "async-timeout>=4.0.3",
@@ -42,7 +42,6 @@ dependencies = [
 version = {attr = "statusbot.bot.__version__"}
 
 [project.optional-dependencies]
-user = ["idleuserextend~=0.0.1"]
 tests = [
     "pytest>=5.0",
     "pytest-cov>=6.0.0",
